[package]
name = "xv-lidar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.0.15"
features = ["derive"]

[dependencies.serialport]
version = "4.2.0"
default-features = false

[dependencies.colored]
version = "2.0.0"
